# HatiData-SDKs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  release-cli.yml
cli/: Cargo.toml  README.md
cli/src/: context.rs  lib.rs  local_engine.rs  main.rs  sync.rs  tier.rs
cli/src/commands/: auth.rs  config.rs  dashboard.rs  init.rs  mod.rs  pull.rs  push.rs  query.rs  status.rs
cli/tests/: cli_config.rs  cli_init.rs  cli_query.rs  cli_status.rs
examples/: README.md
examples/dbt/sample_project/: dbt_project.yml  profiles.yml
examples/dbt/sample_project/models/marts/: revenue_by_region.sql
examples/dbt/sample_project/models/staging/: stg_customers.sql
examples/dbt/sample_project/seeds/: customers.csv
examples/python/: crewai_agent.py  langchain_agent.py  mcp_server.py  quickstart.py  rag_search.py  requirements.txt
examples/sql/: 001_basic_select.sql  002_flatten.sql  003_qualify.sql  004_dateadd.sql  005_listagg.sql
examples/typescript/: local_mode.ts  package.json  quickstart.ts
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/crewai_hatidata/: __init__.py  memory.py  tools.py
integrations/crewai/tests/: test_imports.py
integrations/dbt/: README.md  pyproject.toml  setup.cfg  setup.py
integrations/dbt/ci/: run_dbt_tests.sh
integrations/dbt/dbt/adapters/hatidata/: __init__.py  column.py  connections.py  impl.py  relation.py
integrations/dbt/dbt/include/hatidata/: dbt_project.yml  profiles.yml.example
integrations/dbt/dbt/include/hatidata/macros/: adapters.sql  catalog.sql  columns.sql  relations.sql  timestamps.sql
integrations/dbt/dbt/include/hatidata/macros/materializations/: ephemeral.sql  incremental.sql  table.sql  view.sql
integrations/dbt/dbt/include/hatidata/macros/utils/: data_types.sql  dateadd.sql  datediff.sql  listagg.sql  safe_cast.sql
integrations/dbt/tests/: conftest.py
integrations/dbt/tests/functional/adapter/: test_basic.py  test_incremental.py  test_materializations.py  test_seeds.py  test_snapshots.py
integrations/dbt/tests/functional/snowflake_compat/: test_flatten.py  test_qualify.py  test_semi_structured.py  test_variant.py
integrations/dbt/tests/unit/: test_column_types.py  test_connections.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/langchain_hatidata/: __init__.py  memory.py  tools.py  vectorstore.py
integrations/langchain/tests/: test_imports.py
integrations/mcp/: DIRECTORY_SUBMISSION.md  README.md  claude-code.json  claude-desktop.json  cursor.json  smithery.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/hatidata/: __init__.py  _mcp.py  client.py  cot.py  memory.py  triggers.py
sdk/python/hatidata_agent/: __init__.py  client.py  control_plane.py  langchain.py  local_engine.py  mcp_server.py
sdk/python/hatidata_agent/v2/: __init__.py  client.py
sdk/python/tests/: conftest.py  test_client.py  test_control_plane.py  test_cot.py  test_mcp.py  test_memory.py  test_triggers.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/src/: client.ts  control-plane.ts  errors.ts  index.ts  local.ts  types.ts
sdk/typescript/src/v2/: client.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts  control-plane.test.ts
