[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-hatidata"
version = "0.1.0"
description = "LangChain integration for HatiData — Memory, VectorStore, and Tools backed by HatiData"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Marviy Pte Ltd", email = "eng@hatidata.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hatidata-agent>=0.1.0",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://hatidata.com"
Documentation = "https://docs.hatiosai.com/hatidata"
Repository = "https://github.com/HatiOS-AI/HatiData-Core"
Changelog = "https://github.com/HatiOS-AI/HatiData-Core/releases"

[tool.setuptools.packages.find]
where = ["."]
